--- a/css/tailwindcfg.css
+++ b/css/tailwindcfg.css
@@ -3,7 +3,7 @@
 
 @font-face {
   font-family: 'Daikon';
-  src: local('Daikon'), url(/assets/fonts/Pepper-Type-Daikon-ExtraLight.ttf) format('ttf');
+  src: local('Daikon'), url('../assets/fonts/Pepper-Type-Daikon-ExtraLight.woff2') format('woff2');
 }
 
 @tailwind utilities;
